# WebSocket_Uebung

./: README.md
Aggregator/: CMakeLists.txt  server.cpp
Client/: client.py  note.txt
Datenserver/: CMakeLists.txt  server.cpp
REST_Api/: CMakeLists.txt  main.cpp
